--- a/react-website/src/pages/LandingPage.css
+++ b/react-website/src/pages/LandingPage.css
@@ -1,10 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
 ._00Landing__00Landing {
+	display: flex;
+	height: calc(100vh - 81px);
+
 	position: relative;
 	left: 0px;
 	top: 0px;
 	margin: auto;
 	width: 100%;
-	height: 100vh;
 	overflow: auto;
 	background: rgba(234, 231, 220, 1);
 }
@@ -50,8 +54,8 @@
 	position: relative;
 	left: 50%;
 	top: 5%;
-	width: 29.25%;
-	height: 80%;
+	width: 29.24%;
+	height: 85%;
 	background: rgba(219, 234, 254, 1);
 }
 ._00Landing__00Landing .ImageFrame ._04_sequoia1 {
