--- a/react-website/src/components/RegistrationPopUp.css
+++ b/react-website/src/components/RegistrationPopUp.css
@@ -16,7 +16,7 @@ body.active-modal {
 	justify-content: center;
 	color: rgba(234, 231, 220, 1);
 	font-family: Work Sans;
-	font-size: 24px;
+	font-size: 21px;
 	font-weight: 500;
 	line-height: 24px;
 
@@ -26,7 +26,7 @@ body.active-modal {
 }
 
 .modal,
-.overlay {
+.overlay2 {
 	width: 100vw;
 	height: 100vh;
 	top: 0;
@@ -36,7 +36,7 @@ body.active-modal {
 	position: fixed;
 }
 
-.overlay {
+.overlay2 {
 	background: rgba(49, 49, 49, 0.8);
 }
 .modal-content {
@@ -126,6 +126,7 @@ body.active-modal {
 
 	&:hover {
 		color: #565553;
+		cursor: pointer;
 	}
 
 	&:active {
