--- a/react-website/src/pages/HomePage.css
+++ b/react-website/src/pages/HomePage.css
@@ -1,4 +1,4 @@
-/* LandingPage.css */
+/* HomePage.css */
 
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
